2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * gwlib/conn.[ch]: added new function 'use_global_trusted_ca_file' that
    allow setting of global trusted ca w/o a need to call conn_config_ssl.
  * gwlib/mime.[ch]: hide MIMEEntity struct and don't allow direct values
    manipulation. Manipulation allowed only through access functions.
    Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for provided patch.
    [Msg-Id: <963281CE-055B-4254-96D6-9DDE6FAC8F30@dsmagic.com>]

2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * gwlib/http.[ch]: allows http_receive_result to be non blocking if requested.
    This allow us to start only one thread for http client side.

2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * configure, configure.in, gw-config.h.in, gwlib/conn.c, gwlib/gw-prioqueue.c,
    gwlib/gwmem-check.c, gwlib/http.c: replaced '__inline' which is GCC extention
    with 'inline' and added configure check whether compiler supports inline.
    This should fix #307.

2006-03-01  Stipe Tolj  <stolj at kannel.org>
  * gwlib/conn.c: fixing compiler issues from Alex's previous commit. 
    Thanks to Rene for pointing out the CVS HEAD didn't compile.

2006-02-28  Alexander Malysh <amalysh at kannel.org>
  * gwlib/conn.c: fixed deadlock when first thread made conn_unregister call
    and the FDSet thread at the same time called conn_callback
    function. Then the first thread locked [in|out] lock and wait for unregister
    completion but the fdset thread tried to lock [in|out].
    Also fixed some gcc4 warnings.
    This commit should fix #302 and some others http client related.

2006-02-23  Stipe Tolj  <stolj at kannel.org>
  * gw/wap-appl.c: apply higher log-level usage for octstr_dump() in 
    decode_bearer_indication() and check_application_headers(). NLC.
  
2006-02-23  Stipe Tolj  <stolj at kannel.org>
  * gw/wap-appl.c: fixing a bug causing wapbox to panic while we handle PPG