@@ -1,3 +1,8 @@
+2006-03-14  Alexander Malysh <amalysh at kannel.org>
+  * gwlib/mime.[ch]: minimal additional patch for the mime module, to allow
+    client/user access to the start element.
+    Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for provided patch.
+
 2006-03-05  Alexander Malysh <amalysh at kannel.org>
   * gwlib/conn.[ch]: added new function 'use_global_trusted_ca_file' that
     allow setting of global trusted ca w/o a need to call conn_config_ssl.
